# sqlalchemy-cassandra

./: .gitignore  README.md  pyproject.toml  setup.py
src/sqlalchemy_cassandra/: __init__.py  base.py  compiler.py  dialect.py  requirements.py  resultproxy.py  types.py
tests/: test_dialect.py
